--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "src/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Shakiqur Rahman",
   "license": "ISC",
   "description": "",
   "dependencies": {
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "nodemon": "^3.1.3"
   },
